デリゲートについて 完成

--- a/public/いい加減説明できるようになりたいデリゲート.md
+++ b/public/いい加減説明できるようになりたいデリゲート.md
@@ -1,5 +1,5 @@
 ---
-title: いい加減説明できるようにしたいAction,Func,Expression
+title: 【C#】いい加減説明できるようにしたいデリゲート,Action,Func,Expression
 tags:
   - 'C#'
   - '.NET'
@@ -13,7 +13,7 @@ ignorePublish: false
 # はじめに
 C#を教えていると「デリゲートって結局なんすか？？」とよく質問されます。
 「メソッドを引数に渡せてあげられる」と言うのは簡単ですが、正直自分も感覚値でしか理解していないので今後説明できるように記事にしようと思います。
-あくまでサーバー側での話なので、イベント管理などの説明は省きます。
+本記事では、主にサーバーサイドの開発におけるデリゲートの使用に焦点を当てます。そのため、UIやイベント駆動型のシステムにおけるデリゲートの使用（イベント管理など）については取り扱いません。
 
 # 環境
 C# 12 .NET8
@@ -75,15 +75,14 @@ public void DelegateOnceTest()
 ```
 
 ## ActionとFunc
-前項の書き方を見ると書き方が複雑なんですが、.NETでは短縮形のような書き方が用意されています。
-それが`Action`と`Func`です。
-`Action`は戻り値がない（void） メソッドを参照するために使用します。一方、`Func`は 戻り値がある メソッドを参照します。
+前項の書き方を見ると書き方が複雑なんですが、その代わりに、C#では汎用的なデリゲート型として`Action`と`Func`が用意されています。
+`Action`は**戻り値がない**メソッドを扱うために使用され、`Func`は**戻り値がある**メソッドを扱います。
 メンバ変数を省略できたりこっちが一般的な書き方のように思うので、以下からはこちらで書いていきます。
 例として、上のコードをそれぞれ置き換えてみます。
 
 ### Action
 `Action`は返り値がないデリゲートで使用することができます。
-以下のようにアロー関数でメソッドを書いて変数に格納する使い方が一般的なように思います。
+以下のようにラムダ式でメソッドを書いて変数に格納する使い方が一般的なように思います。
 ```c#
 [Fact(DisplayName = "Actionで書いてみる")]
 public void ActionTest()
@@ -202,7 +201,8 @@ string FuncSayGoodMorning(string name)
 }
 ```
 
-やっていることは同じなのですが、メソッド自体を抽象化することができるので所謂主処理への影響を少なくすることが可能になります。
+このように、デリゲートを使うことでメソッドを抽象化でき、メインの処理に対して柔軟に機能を追加することが可能になります。
+主処理への影響を最小限に抑えつつ、機能を拡張できます。
 
 ### 応用:メソッドチェーン
 わざわざ配列にしなくてもデリゲート自体にメソッドを貯め込むことができます。
@@ -307,8 +307,8 @@ public void DynamicMethodTest(string name)
 
 # Expression
 上記の`Action`と`Func`を理解して初めて`Expression`に入門できます。
-`Expression` は、式ツリーを表現するクラスで、コードをデータとして扱うことができます。
-これにより、より低レベルな階層から処理を作れるので、高度に抽象化された処理を作ることができます。
+`Expression`を使うことで、コードをデータとして操作し、動的に処理を生成できます。
+これにより、高度に抽象化された動的な処理を作成可能になります。
 **大抵のことは`Action`と`Func`で事足りるので後述のオーバーヘッド問題もあり、本当に必要になったとき以外では利用しないほうがいいと思います。**
 
 ## Expressionの使用例
@@ -507,9 +507,18 @@ Name は null であってはなりません。
 
 ## 注意点
 `Expression`はデリゲートにするために`Compile()`する必要があります。
-これは非常にコストが高いものになるので、何も考えないで実装するとオーバーヘッドが発生し、深刻な問題になりかねないものになります。
-以下にまとめているので、気になった方は読んでみてください。
+これは非常にコストが高いものになるので、無計画に`Expression`を多用すると、コンパイル時にオーバーヘッドが発生し、パフォーマンスに深刻な影響を与える可能性があります。
+以下に問題と対策をまとめているので、気になった方は読んでみてください。
 
 https://qiita.com/simoyama2323/items/8741f455292c03ed1fd9
 
 # まとめ
+C#のデリゲート(`Action`、`Func`) 、`Expression`は、それぞれ異なる場面で柔軟な処理を実現するために使われます。
+
+1. **デリゲート** : メソッドを変数として扱うことができ、動的にメソッドを差し替えたり、リストに格納して連続で呼び出すなどの用途に適しています。
+2. **`Action`,`Func`** : デリゲートを簡潔に扱うための.NETで用意されている汎用的な形です。
+Actionは戻り値がないメソッド、Funcは戻り値があるメソッドを扱います。どちらもメソッドを動的に差し替えたり、連結して複数の処理をまとめて実行する際に便利です。
+3. **`Expression`** : 式ツリーを使って、コード自体をデータとして扱い、より柔軟で動的な処理を作成するのに使われます。たとえば、動的な式の生成や、リフレクションのようにプロパティ名を取得してエラーハンドリングに応用することも可能です。
+
+適切な場面で使用することで、コードの再利用性、柔軟性、保守性を向上させることができます。
+使いこなすことで、より強力で拡張性のあるC#プログラムを作成できるでしょう。
