デリゲートについて ラムダ式の省略形を使用する

--- a/public/いい加減説明できるようになりたいデリゲート.md
+++ b/public/いい加減説明できるようになりたいデリゲート.md
@@ -102,8 +102,8 @@ public void ActionTest()
 ```c#
 public void ActionTest()
 {
-    Action<string> greet1 = name => SayHello(name);
-    Action<string> greet2 = name => SayGoodbye(name);
+    Action<string> greet1 = SayHello;
+    Action<string> greet2 = SayGoodbye;
 
     // デリゲートの呼び出し
     greet1("Alice");
@@ -122,7 +122,7 @@ public void ActionTest()
 public void FuncTest()
 {
     Func<string, string> greet1 = name => $"こんにちは、{name}さん！";
-    Func<string, string> greet2 = name => FuncSayGoodbye(name);
+    Func<string, string> greet2 = FuncSayGoodbye;
 
     // デリゲートの呼び出し
     _output.WriteLine(greet1("Alice"));
@@ -149,7 +149,7 @@ public void CollectionTest()
     List<Func<string, string>> funcs = new();
     Func<string, string> greet1 = name => $"こんにちは、{name}さん！";
     funcs.Add(greet1);
-    Func<string, string> greet2 = name => FuncSayGoodbye(name);
+    Func<string, string> greet2 = FuncSayGoodbye;
     funcs.Add(greet2);
 
     foreach(var g in funcs)
@@ -183,9 +183,9 @@ public void CollectionTest()
     List<Func<string, string>> funcs = new();
     Func<string, string> greet1 = name => $"こんにちは、{name}さん！";
     funcs.Add(greet1);
-    Func<string, string> greet2 = name => FuncSayGoodbye(name);
+    Func<string, string> greet2 = FuncSayGoodbye;
     funcs.Add(greet2);
-    Func<string, string> greet3 = name => FuncSayGoodMorning(name);
+    Func<string, string> greet3 = FuncSayGoodMorning;
     funcs.Add(greet3);
 
     // 主処理に影響しない
@@ -211,7 +211,7 @@ string FuncSayGoodMorning(string name)
 public void DelegateChainTest()
 {
     Action<string> greet1 = name => _output.WriteLine($"こんにちは、{name}さん！");
-    greet1 += name => SayGoodbye(name);
+    greet1 += SayGoodbye;
 
     greet1("Alice");
 }
