依存関係メソッドについて

--- a/public/依存関係メソッド.md
+++ b/public/依存関係メソッド.md
@@ -1,5 +1,5 @@
 ---
-title: 【C#】依存性注入メソッドのライフサイクル
+title: 【C#】依存性注入メソッドのライフサイクル ~AddTransient/AddScoped/AddSingleton~
 tags:
   - 'C#'
   - '.NET'
@@ -11,8 +11,67 @@ slide: false
 ignorePublish: false
 ---
 # はじめに
+C#での依存性注入（DI）では、3つの依存性注入メソッドのライフサイクル（`AddTransient`、`AddScoped`、`AddSingleton`）が使用できます。
+それぞれ依存性注入するのは変わりませんが、オブジェクトの生存時間が違うので実際に比較します。
+
+# 環境
+.NET 8
 
 # お試しコード
+`AddTransient`、`AddScoped`、`AddSingleton`を以下のコードで切り替えながら`serve`エンドポイントを叩いてみて試してみます。
+
+```c#:Program.cs
+using DILifeCycle;
+using Microsoft.AspNetCore.Mvc;
+
+var builder = WebApplication.CreateBuilder(args);
+
+// 依存性注入コンテナへのサービス登録
+// AddTransient、AddScoped、AddSingleton を切り替えて試す
+builder.Services.AddTransient<IService, ServiceA>();
+// builder.Services.AddScoped<IService, ServiceA>();
+// builder.Services.AddSingleton<IService, ServiceA>();
+
+var app = builder.Build();
+
+// ルーティングの設定
+app.MapGet("/serve", (IService service1, [FromServices] IService service2) =>
+{
+    var id1 = service1.Serve();
+    var id2 = service2.Serve();
+    return Results.Ok(new { Message = "Service Called", id1, id2 });
+});
+
+// アプリケーションの実行
+app.Run();
+```
+
+注入するオブジェクトにはUUIDを振ってオブジェクトの状態を監視します。
+
+```c#:IService.cs
+public interface IService
+{
+    Guid Serve();
+}
+
+public class ServiceA : IService
+{
+    public Guid InstanceId { get; private set; }
+
+    public ServiceA()
+    {
+        // インスタンスIDを設定
+        InstanceId = Guid.NewGuid();
+        Console.WriteLine($"ServiceA instance created with ID: {InstanceId}");
+    }
+
+    public Guid Serve()
+    {
+        Console.WriteLine($"ServiceA is serving. Instance ID: {InstanceId}");
+        return InstanceId;
+    }
+}
+```
 
 ## AddTransient
 
