転職について

--- a/public/未経験で入社して4年経ったので転職しました.md
+++ b/public/未経験で入社して4年経ったので転職しました.md
@@ -1,5 +1,5 @@
 ---
-title: 未経験でSI企業に入社して4年経ったので転職した備忘録
+title: 未経験でSI企業に入社して4年半経ったので転職した話
 tags:
   - ''
 private: false
@@ -12,22 +12,22 @@ ignorePublish: false
 # はじめに
 転職したので道のりみたいなものを書いていこうと思います。
 また、この活動するにあたって **「あれやっておけばな〜」** だったり **「これマジでやっておいてよかった」** と思ったことが多々あったのでそれも書きます。
-コロナ以降似たような経歴の方が多いと思うので転職を考えてる方のご参考になれば。
+コロナ以降似たような経歴の方が多いと思うので、転職を考えてる方のご参考になれば。
 
 ## 来歴
-- **学歴**: 4年制単科大学を卒業（情報系専攻）
-- **新卒時代**: 全く異なる業界で3年間勤務
-- **26歳での転職**: サーバーサイドの受託開発企業に転職（現在5年目）
-- **30歳での再転職**: 自社開発系企業に転職
+- **学歴**: 情報系専攻で工業系単科大学を卒業。
+- **新卒時**: IT業界とは無関係の業界で3年間働く。
+- **26歳での転職**: 未経験からサーバーサイドの受託開発企業へ転職（現在5年目）。
 
 # 転職動機
 ## 受託開発の課題
-受託開発では多様な案件に携わることができる一方で、プロジェクトの主導権を握ることが難しく、自分主導で何かをすることがほぼ不可能でした。
+受託開発では多様な案件に携わることができる一方で、プロジェクトの主導権を握ることが難しく、自分主導でスケジューリングをすることがほぼ不可能でした。
+スキルを磨くという意味では最高の環境だとは思います。
 
 ## 年収の向上
 現職では未経験採用が主流だったため、給与テーブルが低めに設定されていました。
 30歳を迎えるにあたり、生活や将来設計のために一気に年収を上げたいと考えました。
-毎年社内でおそらく最高額の昇給を受けていたものの、業界平均に達することが難しかったため、転職を決意しました。
+毎年社内でおそらく最高額の昇給を受けていたものの、年齢と比較した業界平均に達することが難しかったため、転職を決意しました。
 
 # 転職軸
 転職を考える上で以下のポイントを重視しました：
@@ -42,61 +42,128 @@ ignorePublish: false
   自身のスキルセットを活かせる環境で働きたいと考え、使用言語にこだわりました。
 
 - **年収**  
-  現在の給与が業界平均に達していなかったため、転職によって年収の向上を目指しました。元々給与が低く設定されていたため、内定を得ることで基本的に年収が上がる見込みでしたが、それ以上に働きやすさや成長機会も重視しました。
+  元が元なので、基本的に年収が上がる見込みでしたのでそこまで重要視はしていませんが、業界平均かどうかは見ていました。
 
 # 活動期間
-- 1回目 (4月~6月)
+- **1回目 4月~6月**
+給与改定を行った翌日から3ヶ月間在職中に行いました。
+結果失敗。
 
+- **2回目 10月末~11月中旬**
+すでに退職届は提出していて、有給消化中に行いました。
+退職日以降は難易度が上がるとエージェントより伺ったので、短期決戦を意識しました。
+短期間で複数社受けたので、有給消化中でなければ消化しきれないスケジュールでした。
+内定後に退職を伝えるのが一般的だとは思いますが、ここらへんはケース・バイ・ケースかなと思いました。
 
 # 結果
-転職活動では計10社に書類を提出しました。
+| **項目**          | **1回目（4〜6月）**       | **2回目（10〜11月）**   |
+|-------------------|--------------------------|-------------------------|
+| 応募社数          | 25社                    | 10社                   |
+| 書類通過率        | 16%（4社）                     | 80%（8社）                    |
+| 1次面接通過率     | 100%（4社）                    | 88%（7社）                    |
+| 最終面接通過数    | 2社                      | 2社                    |
 
-- **書類選考通過 (0〜1週間目)**  
-  8社が書類選考を通過。
 
-- **1次面接通過 (2週間目)**  
-  7社が1次面接を通過しましたが、そのうち3社を辞退しました。
+## 1回目
+良いところがあればといった感覚でSI含め計25社に書類を提出しました。
 
-- **2次及び最終面接通過 (3週間目)**  
-  1社辞退、1社お見送り、2社内定を頂きました。
+  - **書類選考通過**  
+  4社が書類選考を通過
 
-内定を頂いた企業はどちらも自社開発系であり、最終的な選択基準として「長く働けそうか」を重視しました。
+  - **1次面接通過**  
+  全て通過
+
+  - **2次及び最終面接通過**  
+  2社お見送り、2社内定でしたがどちらも辞退
+
+あまりの書類の通らなさに絶望していました。
+今思えばフォーマットなどまだまだ工夫する点があったかなと思います。
+エージェントの**IT中途は書類をよく見ていない**という言葉は信用しないようにしましょう。
+SI系と自社開発系から内定を頂きましたが、第一志望ではなかったのでどちらも辞退しました。
+面接はたった4社でしたが、忙しすぎたので仕事しながら転職活動は現実的じゃないなと思いました。
+
+## 2回目
+計10社に書類を提出しました。
+エージェントは変えました。
+
+  - **書類選考通過 (0〜1週間目)**  
+  8社が書類選考を通過
+
+  - **1次面接通過 (2週間目)**  
+  7社が1次面接を通過しましたが、そのうち3社を辞退しました
+
+  - **2次及び最終面接通過 (3週間目)**  
+  1社辞退、1社お見送り、2社内定を頂きました
+
+エージェントを変えて、書類添削を厚く行ってもらえたこともあり書類が通りまくりました。
+内定を頂いた企業はどちらも自社開発系であり第一志望群でしたので、最終判断軸として「長く働けそうか」を重視しました。
 
 # やっておいてよかったこと
 
-## Qiita
-Qiitaに積極的に記事を投稿したことが大きな成果につながりました。
-去年から継続的に技術記事を書き、ほぼ全ての応募企業から高評価を受けました。
+### Qiita
+Qiitaに積極的に記事を投稿したことが一番効きました。
+ほぼ全ての応募企業から高評価を受けました。
 また、面接時にはQiitaで執筆した内容を基に技術的な質問にスムーズに答えることができ、自己PRにも役立ちました。
 
-## 顔写真付き自己紹介サイトの作成
+### 顔写真付き自己紹介サイトの作成
 顔写真を掲載した自己紹介サイトを作成し、これを応募時に使用しました。
-日本ではまだ顔写真を公開することに抵抗感がある企業も多い中、8割の企業から好評を得ました。
-視覚的な印象が良く、書類選考や1次面接での評価が向上しました。
+日本ではまだ顔写真を公開することに抵抗感がある人も多い中、8割の企業から好評を得ました。
+顔写真があることで企業側の安心感みたいなものを買えたように思います。
 
 ![自己紹介サイト](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/855584/a2939b27-352c-8fea-800c-1eca4ef3bfc5.png)
 
-## エージェントによる職務経歴書の添削
-利用したエージェントが非常に丁寧に職務経歴書の添削を行ってくれました。
-見た目や内容を大幅に改善することで、書類選考通過率が著しく高かったです。
-エージェントのサポートが転職活動の成功に大きく寄与したと感じています。
+### エージェントによる職務経歴書の添削
+利用したエージェントが非常に丁寧な職務経歴書の添削を行ってくれました。
+大手企業含め書類がほとんど通ったので、エージェントを利用しておいてよかったなと思います。
 
 # やっておいたほうがよかったこと
 
-## 競技プログラミング
+### 競技プログラミング
 技術試験では競技プログラミングの問題が多く出題されるため、事前に十分な練習をしておくべきでした。
 特に、競プロ特有の多次元配列のアルゴリズムに慣れるための対策が不足していました。
 また、普段と異なる環境でのコーディング練習も必要でした。
 
-## 内定が確定してから退職する
-11月末で退職が決まっていたのでエージェントより今月中に決めきらないと難易度が上がると言われました。
-最初は半信半疑だったのですが、実際に最終選考で今月の退職が決まってますと言った企業では渋い顔をされ、お見送りになりました。
-退職理由も本心から前向きであり、あまり心配していなかったのですが、企業からすると「また辞めるのではないか」という不信感を抱かせてしまうようです。
+### 応募企業の深堀り（最終面接）
+「最終面接は入社意思の確認」というのは、この業界だとほぼほぼ間違いで相違ないかと思います。
+技術だけではなく、**入社後具体的に何をやりたいか**を明確にする必要があります。
+
+:::note 
+Q. キャリアプランを教えて下さい
+A. 将来は〇〇な立場になっていたい
+
+↓
+
+Q. ではその立場になったら弊社で何をしたいですか
+A. 〇〇（製品名）で〇〇をしたい
+:::
+
+自社開発系の最終ではほぼ聞かれる質問かと思います。
+このとき重要なのは**製品もしくはサービス名**を出すことです。
+1社これが出せなくてお見送りになりました。
+
+**志向性**という抽象的な言葉がよく見られますが、ここさえ抑えていれば志向性が理由でお見送りはないような気がします。
 
 # やりすぎてしまったこと
 
-## 面接対策
+### 面接対策
 緊張してしまう質なので、徹底的に面接対策をしましたがほどほどでよかったように思います。
 頭の中で完全にパッケージ化していたのですが、それと外れる質問が来たときのなんとかパッケージに戻そうとしてしまい、QAズレが起こったことがありました。
 面接対策はほどほどに、自己分析（自分のできること）を徹底的に行ったほうがコスパがいいように思います。
 
+# どちらともいえないこと
+
+### 内定が確定してから退職する
+#### 難易度があがる
+11月末で退職が決まっていたのでエージェントより今月中に決めきらないと難易度が上がると言われました。
+最初は半信半疑だったのですが、実際に最終選考で今月の退職が決まってますと言った企業では渋い顔をされ、お見送りになりました。
+退職理由も本心から前向きであり、あまり心配していなかったのですが、企業からすると「また辞めるのではないか」という不信感を抱かせてしまうようです。
+
+#### 時間的余裕
+現職が忙しくてそもそも転職する時間が取れない人も、時間（年齢）は止まってくれません。
+そんなときは退職してからの転職活動にしたほうが、前向きに余裕を持って企業選定ができると思います。
+在職中に行ったときは本当に忙しすぎて全く心に余裕を持てませんでした。
+
+# まとめ
+年齢的にもこれが最後の転職だと思うので納得のいく活動が出来てよかったと思います。
+自社開発系に転職したい場合は「御社で**具体的に**何をしたいか」という部分を自分のスキルと照らし合わせて考えるのが重要かと思います。
+これから転職活動を考えている方にとって、この記事が少しでも参考になれば幸いです。
