転職について

--- a/public/未経験で入社して4年経ったので転職しました.md
+++ b/public/未経験で入社して4年経ったので転職しました.md
@@ -1,7 +1,7 @@
 ---
 title: 未経験でSI企業に入社して4年半経ったので転職した話
 tags:
-  - ''
+  - '転職'
 private: false
 updated_at: ''
 id: null
@@ -11,13 +11,15 @@ ignorePublish: false
 ---
 # はじめに
 転職したので道のりみたいなものを書いていこうと思います。
-また、この活動するにあたって **「あれやっておけばな〜」** だったり **「これマジでやっておいてよかった」** と思ったことが多々あったのでそれも書きます。
+また、この活動するにあたって **「あれやっておけばな〜」** だったり **「これやっておいてよかった」** と思ったことが多々あったのでそれも書きます。
 コロナ以降似たような経歴の方が多いと思うので、転職を考えてる方のご参考になれば。
 
-## 来歴
-- **学歴**: 情報系専攻で工業系単科大学を卒業。
-- **新卒時**: IT業界とは無関係の業界で3年間働く。
-- **26歳での転職**: 未経験からサーバーサイドの受託開発企業へ転職（現在5年目）。
+## 自己紹介
+- 30歳
+- 情報系専攻で私大理系卒
+- エンジニア歴4年半
+- 25歳からSI系企業のサーバーサイドでエンジニアデビュー
+- 経験案件はほとんどゲーム系（アプリ・コンシューマ）
 
 # 転職動機
 ## 受託開発の課題
@@ -59,12 +61,12 @@ ignorePublish: false
 | **項目**          | **1回目（4〜6月）**       | **2回目（10〜11月）**   |
 |-------------------|--------------------------|-------------------------|
 | 応募社数          | 25社                    | 10社                   |
-| 書類通過率        | 16%（4社）                     | 80%（8社）                    |
-| 1次面接通過率     | 100%（4社）                    | 88%（7社）                    |
+| 書類通過率        | 4社                     | 8社                    |
+| 1次面接通過率     | 4社                    | 7社                    |
 | 最終面接通過数    | 2社                      | 2社                    |
 
 
-## 1回目
+## 1回目（4〜6月）
 良いところがあればといった感覚でSI含め計25社に書類を提出しました。
 
   - **書類選考通過**  
@@ -77,12 +79,12 @@ ignorePublish: false
   2社お見送り、2社内定でしたがどちらも辞退
 
 あまりの書類の通らなさに絶望していました。
-今思えばフォーマットなどまだまだ工夫する点があったかなと思います。
+今思えばフォーマットなど、まだまだ工夫する点があったかなと思います。
 エージェントの**IT中途は書類をよく見ていない**という言葉は信用しないようにしましょう。
 SI系と自社開発系から内定を頂きましたが、第一志望ではなかったのでどちらも辞退しました。
 面接はたった4社でしたが、忙しすぎたので仕事しながら転職活動は現実的じゃないなと思いました。
 
-## 2回目
+## 2回目（10〜11月）
 計10社に書類を提出しました。
 エージェントは変えました。
 
@@ -95,7 +97,7 @@ SI系と自社開発系から内定を頂きましたが、第一志望ではな
   - **2次及び最終面接通過 (3週間目)**  
   1社辞退、1社お見送り、2社内定を頂きました
 
-エージェントを変えて、書類添削を厚く行ってもらえたこともあり書類が通りまくりました。
+エージェントを変えて、**書類添削を厚く行ってもらえた**こともあり書類が通りまくりました。
 内定を頂いた企業はどちらも自社開発系であり第一志望群でしたので、最終判断軸として「長く働けそうか」を重視しました。
 
 # やっておいてよかったこと
